load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["enum.go"],
    importpath = "github.com/jumbochain/go-jumbochain-consensus/cmd/flags",
    visibility = ["//visibility:public"],
    deps = ["@com_github_urfave_cli_v2//:go_default_library"],
)
