load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/jumbochain/go-jumbochain-consensus/beacon-chain/slasher/types",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
    ],
)
