load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "github.com/jumbochain/go-jumbochain-consensus/cmd/prysmctl/deprecated",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/prysmctl/deprecated/checkpoint:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
