load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "constants.go",
        "error.go",
        "interface.go",
    ],
    importpath = "github.com/jumbochain/go-jumbochain-consensus/crypto/bls/common",
    visibility = ["//visibility:public"],
    deps = ["//config/fieldparams:go_default_library"],
)
